@@ -11,11 +11,13 @@ Programs_GtkLauncher_SOURCES = \
 	WebKitTools/GtkLauncher/main.c
 
 Programs_GtkLauncher_CFLAGS = \
-	$(DEPENDENCIES_CFLAGS) \
+        $(GLOBALDEPS_CFLAGS) \
+        $(WEBKITDEPS_CFLAGS) \
 	$(global_cflags)
 
 Programs_GtkLauncher_LDADD = \
-	$(DEPENDENCIES_LIBS) \
+        $(GLOBALDEPS_LIBS) \
+        $(WEBKITDEPS_LIBS) \
 	libJavaScriptCore.la \
 	libWebKitGtk.la
 
@@ -38,12 +40,14 @@ Programs_DumpRenderTree_SOURCES = \
 	WebKitTools/DumpRenderTree/gtk/WorkQueueItemGtk.cpp
 
 Programs_DumpRenderTree_CXXFLAGS = \
-	$(DEPENDENCIES_CFLAGS) \
+        $(GLOBALDEPS_CFLAGS) \
+        $(WEBKITDEPS_CFLAGS) \
 	$(global_cxxflags) \
 	$(global_cflags)
 
 Programs_DumpRenderTree_LDADD = \
-	$(DEPENDENCIES_LIBS) \
+        $(GLOBALDEPS_LIBS) \
+        $(WEBKITDEPS_LIBS) \
 	libJavaScriptCore.la \
 	libWebKitGtk.la
 
