@@ -1,3 +1,7 @@
+2008-02-23  Jan Michael Alonzo  <jmalonzo@unpluggable.com>
+
+        * GNUmakefile.am: Add GLOBALDEPS for testkjs and minidom.
+
 2008-02-23  Darin Adler  <darin@apple.com>
 
         Reviewed by Anders.
